[package]
name = "eru"
version = "0.1.0"
authors = ["Tomoki Aonuma <uasi@uasi.jp>"]
edition = "2018"

[[bin]]
name = "eru"
path = "src/main.rs"

[dependencies]
clap = "2.33.3"
libc = "0.2.80"
unicode-width = "0.1.1"

[dependencies.ncurses]
version = "5.99.0"
default-features = false  # Disable wide support for macOS
